updated html with divs

--- a/templates/main.html
+++ b/templates/main.html
@@ -14,10 +14,23 @@
 <body>
 
 <div id="main-container">
+
 	<form id ="creepform">
-	Your Age:<input type="text" name="your_age"><br>
-	Their Age:<input type="text" name="other_age"><br>
-	<button type="button" id="creep-button">Is It Creepy?</button>
+		<div class="form-label">
+			Your Age:
+		</div>
+		<div class="form-input">
+			<input type="text" name="your_age">
+		</div>
+		<div class="form-label">
+			Their Age:
+		</div>
+		<div class="form-label">
+			<input type="text" name="other_age">
+		</div>
+		<div class = "button-container">
+			<button type="button" id="creep-button">Is It Creepy?</button>
+		</div>
 
 	</form>
 </div>
