--- a/static/creepy_style.css
+++ b/static/creepy_style.css
@@ -1,11 +1,52 @@
+body {
+	font-family: "Trebuchet MS", Helvetica, sans-serif
+}
+
 #creep-result {
-	height:50px;
-	width: 300px;
-	background-color: blue;
+	background-color: #dddddd;
+	height:100px;
+	width: 500px;
+	margin: auto;
+	text-align: center;
+	color: #002654;
+	padding: 10px;
+	border-bottom-right-radius: 5px;
+	border-bottom-left-radius: 5px; 
 }
 
 #main-container {
-	width: 300px;
-	height: 150px;
-	background-color: gray;
+	background-color: #aaaaaa;
+	height: 300px;
+	width: 500px;
+	margin: auto;
+	text-align: center;
+	color: #002654;
+	padding:10px;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	
+}
+
+input[type="text"] {
+	background-color: #f7f7f7;
+	color: #aaaaaa;
+	height: 20px;
+	border-radius: 5px;
+}
+
+#creep-button {
+	background-color: #eeb111;
+	color: #002654;
+	border-radius: 5px;
+	margin-top: 20px;
+	height: 30px;
+	width: 30%;
+	font-family: "Trebuchet MS", Helvetica, sans-serif;
+	font-size: 1.2em;
+	font-weight: bold;
+
+}
+.form-label {
+	margin: 10px
+
 }
