cleaned up project files and added bootstrap

--- a/templates/main.html
+++ b/templates/main.html
@@ -5,11 +5,11 @@
 <head>
     <meta charset="UTF-8" />
     <title>Creepy to Date</title>
-    <link rel="stylesheet" href ="/static/sassy.css"/>
+    <link rel="stylesheet" href ="/static/css/sassy.css"/>
+    <!-- Bootstrap -->
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/custom.css" rel="stylesheet">
 	
-
-
-
 </head>
 <body>
 
@@ -43,6 +43,6 @@
 </div>    
 
     <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-	<script src="/../static/creepy_java.js"></script>
+	<script src="/../static/js/creepy_java.js"></script>
 </body>
 </html>
